feature(bot): add bot auto reply
